# CryptoBot

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  schema.sql
bot/: __main__.py  bot.py
bot/extensions/: coins.py  errors.py  frequency_cache.py  portfolio.py  trades.py  trending.py  tutorial.py
bot/fetchers/: candlestick_fetch.py  crypto_price.py  fetch_exchange_rates.py  fetch_token.py  fetch_token_list.py  fetch_top_prices.py  rf.py  time_series_graph.py  trending_token.py
bot/types/: __init__.py  currencies.py  locales.py  record.py
bot/utils/: asyncpg_to_dict.py  config.py  context.py  dateutils.py  flags.py  group_data_numbered.py  numerical_paginator.py  paginator.py
